updated javadocs