@@ -5,35 +5,25 @@ import java.util.List;
 /**
  * Beschreibt einen vollständigen Benchmark-Plan.
  *
- * <p>Ein {@code BenchmarkPlan} definiert, <b>welche Konfigurationen</b>
- * in einem Benchmark-Durchlauf ausgeführt werden sollen.
- * Jede Konfiguration entspricht genau einem {@link BenchmarkConfig}-Eintrag.</p>
+ * Ein BenchmarkPlan legt fest, welche Konfigurationen
+ * in einem Durchlauf ausgeführt werden.
+ * Jede Konfiguration entspricht einem BenchmarkConfig-Eintrag.
  *
- * <p>Der Plan enthält selbst keinerlei Logik zur Ausführung oder Messung.
- * Er dient ausschließlich als strukturierte Eingabe für den
- * {@link BenchmarkRunner}, der die einzelnen Runs ausführt.</p>
- *
- * <p>Typischer Ablauf:</p>
- * <ol>
- *   <li>{@link #defaultPlan()} erzeugt einen Standard-Plan.</li>
- *   <li>Der {@link BenchmarkRunner} iteriert über {@link #configs}.</li>
- *   <li>Für jede {@link BenchmarkConfig} wird ein {@link SingleRun} gestartet.</li>
- * </ol>
+ * Der Plan enthält selbst keine Ausführungs- oder Messlogik.
+ * Er dient als strukturierte Eingabe für den BenchmarkRunner.
  */
 public class BenchmarkPlan {
 
     /**
-     * Liste aller Benchmark-Konfigurationen, die ausgeführt werden sollen.
-     *
-     * <p>Die Reihenfolge der Liste bestimmt die Reihenfolge der Ausführung
-     * und der späteren Ausgabe.</p>
+     * Liste aller Benchmark-Konfigurationen.
+     * Die Reihenfolge bestimmt Ausführung und Ausgabe.
      */
     public final List<BenchmarkConfig> configs;
 
     /**
      * Erstellt einen neuen Benchmark-Plan mit den gegebenen Konfigurationen.
      *
-     * @param configs Liste der auszuführenden {@link BenchmarkConfig}-Einträge
+     * @param configs auszuführende Benchmark-Konfigurationen
      */
     public BenchmarkPlan(List<BenchmarkConfig> configs) {
         this.configs = configs;
@@ -42,27 +32,17 @@ public class BenchmarkPlan {
     /**
      * Erzeugt den Standard-Benchmark-Plan für dieses Projekt.
      *
-     * <p>Der Default-Plan testet verschiedene JVM-Varianten
-     * mit demselben Docker-Image, um die Effekte einzelner JVM-Flags
-     * isoliert vergleichen zu können.</p>
+     * Der Default-Plan vergleicht mehrere JVM-Varianten
+     * mit demselben Docker-Image, sodass Unterschiede
+     * ausschließlich durch JVM-Flags entstehen.
      *
-     * <p>Aktuell enthaltene Konfigurationen:</p>
-     * <ul>
-     *   <li><b>baseline</b>: Standard-JVM ohne zusätzliche Flags</li>
-     *   <li><b>coops-off</b>: JVM mit deaktivierten Compressed Oops
-     *       ({@code -XX:-UseCompressedOops})</li>
-     *   <li><b>coh-on</b>: JVM mit aktivierten Compact Object Headers
-     *       ({@code -XX:+UseCompactObjectHeaders})</li>
-     * </ul>
+     * Enthaltene Konfigurationen:
+     * - baseline: Standard-JVM ohne zusätzliche Flags
+     * - coops-off: JVM ohne Compressed Oops
+     * - coh-on: JVM mit Compact Object Headers
+     * - native: GraalVM Native Image
      *
-     * <p>Alle JVM-Varianten verwenden dasselbe Docker-Image
-     * ({@code jvm-optim-demo:jvm}), um sicherzustellen, dass Unterschiede
-     * ausschließlich durch JVM-Optionen entstehen.</p>
-     *
-     * <p>Ein Native-Image ist vorbereitet, aber aktuell auskommentiert.
-     * Es kann später aktiviert werden, um JVM vs. Native direkt zu vergleichen.</p>
-     *
-     * @return ein {@link BenchmarkPlan} mit den Standard-Konfigurationen
+     * @return Benchmark-Plan mit Standard-Konfigurationen
      */
     public static BenchmarkPlan defaultPlan() {
         String jvmImage = "jvm-optim-demo:jvm";
